--- a/index.html
+++ b/index.html
@@ -29,10 +29,170 @@
           <a href="mailto:erteltiago0@gmail.com" class="btn-alt">Hire Me</a>
         </div>
       </section>
+
+      <section id="about">
+        <div class="about-container">
+          <div class="about-image">
+            <img src="assets/profile-pic.jpg" alt="Tiago Ertel" />
+          </div>
+          <div class="about-text">
+            <h2 class="section-title">About Me</h2>
+            <p>
+              I am a Software Engineer based in Dublin with a deep focus on
+              <strong>Backend Development</strong> and
+              <strong>Data Engineering</strong>. Since 2022, I’ve been dedicated
+              to building robust, high-performance systems that turn messy data
+              into business value.
+            </p>
+            <p>
+              My experience at global leaders like
+              <strong>Tramontina</strong> has shaped my approach to software: I
+              build for scalability, prioritize system integrity, and believe
+              that the best code is the kind that solves real-world business
+              challenges efficiently.
+            </p>
+
+            <div class="skills-grid">
+              <div class="skill-category">
+                <h4>Languages</h4>
+                <ul>
+                  <li>Java (Spring Boot)</li>
+                  <li>Python (PySpark)</li>
+                  <li>C# / Genero BDL</li>
+                </ul>
+              </div>
+              <div class="skill-category">
+                <h4>Data & Tools</h4>
+                <ul>
+                  <li>SQL (IBM Informix)</li>
+                  <li>Databricks</li>
+                  <li>Qlik / BI Analytics</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="projects">
+        <h2 class="section-title">Featured Projects</h2>
+        <div class="project-grid">
+          <article class="project-card">
+            <div class="project-content">
+              <h3>Enterprise ERP Logic & Data Integration</h3>
+              <p class="project-tag">Java • Spring Boot • SQL (Informix)</p>
+              <p class="project-description">
+                Developed robust backend modules for supply chain management,
+                optimizing data flow between legacy systems and modern BI tools.
+              </p>
+              <div class="project-links">
+                <a href="#" class="btn-sm">Case Study</a>
+                <a href="https://github.com/yourusername" class="github-link"
+                  >GitHub</a
+                >
+              </div>
+            </div>
+          </article>
+
+          <article class="project-card">
+            <div class="project-content">
+              <h3>Big Data ETL Pipeline</h3>
+              <p class="project-tag">Python • PySpark • Databricks</p>
+              <p class="project-description">
+                Built a scalable data pipeline to process large datasets,
+                transforming raw enterprise data into actionable insights for
+                strategic decision-making.
+              </p>
+              <div class="project-links">
+                <a href="#" class="btn-sm">View Architecture</a>
+                <a href="#" class="github-link">GitHub</a>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <section id="contact">
+        <div class="contact-header">
+          <h2 class="section-title">Get In Touch</h2>
+          <p>
+            Currently available for freelance opportunities and backend
+            consulting.
+          </p>
+        </div>
+
+        <div class="contact-wrapper">
+          <div class="contact-form">
+            <form id="my-form">
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input
+                  type="text"
+                  name="name"
+                  id="name"
+                  placeholder="Your Name"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  placeholder="email@example.com"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <label for="message">Project Details</label>
+                <textarea
+                  name="message"
+                  id="message"
+                  rows="5"
+                  placeholder="Tell me about your project or technical challenge..."
+                  required
+                ></textarea>
+              </div>
+              <button type="submit" id="submit-btn" class="btn">
+                Send Message
+              </button>
+              <p id="status"></p>
+            </form>
+          </div>
+
+          <div class="contact-info">
+            <h3>Direct Channels</h3>
+            <p>Preferred for quick inquiries:</p>
+            <ul class="contact-links">
+              <li>
+                <strong>Email:</strong>
+                <a href="mailto:erteltiago0@gmail.com">erteltiago0@gmail.com</a>
+              </li>
+              <li>
+                <strong>LinkedIn:</strong>
+                <a
+                  href="https://linkedin.com/in/tiago-ertel-7a6451247"
+                  target="_blank"
+                  >tiago-ertel</a
+                >
+              </li>
+              <li>
+                <strong>GitHub:</strong>
+                <a href="https://github.com/tiagoertel" target="_blank"
+                  >tiagoertel</a
+                >
+              </li>
+              <li><strong>Location:</strong> Dublin, Ireland 🇮🇪</li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
       <p>&copy; 2026 Tiago Ertel | Dublin, Ireland</p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
