animations and effects

--- a/index.html
+++ b/index.html
@@ -51,9 +51,13 @@
       </section>
 
       <section id="about">
+        <h2 class="section-title">About Me</h2>
         <div class="about-container">
+          <div class="about-image">
+            <img src="assets/profile-pic.jpg" alt="Tiago Ertel" />
+          </div>
+
           <div class="about-text">
-            <h2 class="section-title">About Me</h2>
             <p>
               I am a Software Engineer based in Dublin with a deep focus on
               <strong>Backend Development</strong> and
@@ -279,7 +283,7 @@
                   href="https://linkedin.com/in/tiago-ertel-7a6451247"
                   target="_blank"
                   rel="noopener noreferrer"
-                  >tiago-ertel</a
+                  >Tiago Ertel</a
                 >
               </li>
               <li>
