light mode and typewriter effect

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
           <li><a href="#skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact" class="btn-sm">Contact</a></li>
+          <div class="theme-switch-wrapper">
+            <button id="theme-toggle" aria-label="Toggle dark mode">
+              <i class="fas fa-moon"></i>
+            </button>
+          </div>
         </ul>
       </nav>
     </header>
@@ -32,7 +37,9 @@
     <main>
       <section id="hero">
         <h1>Tiago Ertel</h1>
-        <p class="subtitle">Software Engineer & Backend Specialist</p>
+        <p class="subtitle">
+          <span id="typewriter"></span><span class="cursor">|</span>
+        </p>
         <p>Building scalable systems with Java, Python, and SQL.</p>
         <div class="cta-group">
           <a href="#projects" class="btn">View My Work</a>
@@ -217,6 +224,27 @@
                 rel="noopener noreferrer"
                 class="github-link"
                 >GitHub</a
+              >
+            </div>
+          </article>
+
+          <article class="project-card card" data-repo="tiagoertel/gui4me">
+            <h3>Big Data ETL Pipeline</h3>
+            <p class="project-tag">Python • PySpark</p>
+
+            <div class="repo-status">
+              <span class="stars"><i class="fas fa-star"></i> --</span>
+              <span class="forks"><i class="fas fa-code-branch"></i> --</span>
+              <span class="last-updated">Updating...</span>
+            </div>
+
+            <p class="project-description">...</p>
+            <div class="project-links">
+              <a
+                href="https://github.com/tiagoertel/gui4me"
+                class="btn-sm"
+                target="_blank"
+                >View Repo</a
               >
             </div>
           </article>
