info update and cv download

--- a/index.html
+++ b/index.html
@@ -40,20 +40,19 @@
         <p class="subtitle">
           <span id="typewriter"></span><span class="cursor">|</span>
         </p>
-        <p>Building scalable systems with Java, Python, and SQL.</p>
+        <p>
+          Building scalable, secure systems with a focus on Backend excellence
+          and data-driven solutions.
+        </p>
         <div class="cta-group">
           <a href="#projects" class="btn">View My Work</a>
           <a
-            href="#contact"
-            class="btn"
-            style="
-              background: transparent;
-              border: 2px solid var(--accent-color);
-              color: var(--accent-color);
-              margin-left: 10px;
-            "
-            >Hire Me</a
+            href="assets/Tiago_Ertel_software_developer_CV.pdf"
+            download
+            class="btn btn-alt"
           >
+            <i class="fas fa-download"></i> Download CV
+          </a>
         </div>
       </section>
 
@@ -63,37 +62,39 @@
           <div class="about-image">
             <img src="assets/profile-pic.jpg" alt="Tiago Ertel" />
           </div>
-
           <div class="about-text">
             <p>
-              I am a Software Engineer based in Dublin with a deep focus on
-              <strong>Backend Development</strong> and
-              <strong>Data Engineering</strong>. Since 2022, I’ve been dedicated
-              to building robust, high-performance systems that turn messy data
-              into business value.
+              I am a Software Engineer based in <strong>Dublin</strong> with a
+              strong foundation in
+              <strong>Enterprise Backend Development</strong>. My approach is
+              simple: I believe code should be self-documenting, clean, and
+              built to solve complex business logic.
             </p>
             <p>
-              My experience at global leaders like
-              <strong>Tramontina</strong> has shaped my approach to software: I
-              build for scalability and believe that the best code is the kind
-              that solves real-world business challenges.
+              During my time at <strong>Tramontina</strong>, I specialized in
+              the "mission-critical" side of tech—handling complex tax
+              calculations and invoice systems where precision is
+              non-negotiable. I thrive on debugging challenges and won't stop
+              until a system is running at 100% efficiency.
             </p>
 
             <div class="skills-grid">
               <div class="skill-category">
-                <h4>Languages</h4>
+                <h4>Backend & Web</h4>
                 <ul>
                   <li>Java (Spring Boot)</li>
                   <li>Python (PySpark)</li>
-                  <li>C# / Genero BDL</li>
+                  <li>C# / JavaScript</li>
+                  <li>React / Thymeleaf / JTE</li>
                 </ul>
               </div>
               <div class="skill-category">
-                <h4>Data & Tools</h4>
+                <h4>Data & Infrastructure</h4>
                 <ul>
-                  <li>SQL (IBM Informix)</li>
-                  <li>Databricks</li>
-                  <li>Qlik / BI Analytics</li>
+                  <li>SQL (PostgreSQL, MySQL, Informix)</li>
+                  <li>Databricks & ETL Pipelines</li>
+                  <li>Docker / Datadog</li>
+                  <li>GitLab CI/CD</li>
                 </ul>
               </div>
             </div>
@@ -106,41 +107,95 @@
         <div class="timeline">
           <div class="timeline-item">
             <div class="timeline-dot"></div>
-            <div class="timeline-date">2022 — Present</div>
+            <div class="timeline-date">2023 — 2025</div>
             <div class="timeline-content card">
-              <h3>Software Engineer</h3>
-              <p class="company">Tramontina | Remote / Brazil</p>
+              <h3>Software Developer</h3>
+              <p class="company">Tramontina Escritório Central | Brazil</p>
               <ul>
                 <li>
-                  Developed backend logic for global ERP systems using
-                  <strong>Java</strong> and <strong>Genero BDL</strong>.
+                  Key member of the <strong>Billing Team</strong> for global
+                  Distribution Centers, maintaining high-availability ERP
+                  systems.
                 </li>
                 <li>
-                  Architected SQL queries and procedures in
-                  <strong>IBM Informix</strong> to optimize inventory tracking.
+                  Optimized financial logic and invoice processing using
+                  <strong>Genero BDL</strong>, <strong>C#</strong>, and
+                  <strong>Informix SQL</strong>.
                 </li>
                 <li>
-                  Collaborated on data engineering tasks using
-                  <strong>Python/PySpark</strong> for BI reporting.
+                  Contributed to Secure Development initiatives, ensuring data
+                  integrity across legacy and modern platforms.
                 </li>
               </ul>
             </div>
           </div>
+        </div>
+      </section>
 
-          <div class="timeline-item">
-            <div class="timeline-dot"></div>
-            <div class="timeline-date">2023</div>
-            <div class="timeline-content card">
-              <h3>Full Stack Programador</h3>
-              <p class="company">Certification | Brazil</p>
-              <ul>
-                <li>
-                  Mastered modern web architectures, focusing on the integration
-                  between <strong>Spring Boot</strong> backends and responsive
-                  frontends.
-                </li>
-              </ul>
-            </div>
+      <section id="education">
+        <h2 class="section-title">Education & Certifications</h2>
+        <div class="skills-wrapper">
+          <div class="card">
+            <i
+              class="fas fa-graduation-cap"
+              style="color: var(--accent-color); font-size: 1.5rem"
+            ></i>
+            <h3>B.Sc. Software Engineering</h3>
+            <p><strong>UNINTER</strong> | 2022 — Present</p>
+            <p style="font-size: 0.9rem; color: var(--secondary-text)">
+              Focusing on Software Architecture and Systems Design.
+            </p>
+          </div>
+
+          <div class="card">
+            <i
+              class="fas fa-certificate"
+              style="color: var(--accent-color); font-size: 1.5rem"
+            ></i>
+            <h3>Full Stack Development</h3>
+            <p><strong>SENAI</strong> | 670 Hours</p>
+            <p style="font-size: 0.9rem; color: var(--secondary-text)">
+              Intensive training in C#, React, and modern web ecosystems.
+            </p>
+          </div>
+
+          <div class="card">
+            <i
+              class="fas fa-shield-alt"
+              style="color: var(--accent-color); font-size: 1.5rem"
+            ></i>
+            <h3>Professional Certifications</h3>
+            <ul
+              style="
+                list-style: none;
+                padding: 0;
+                font-size: 0.9rem;
+                color: var(--secondary-text);
+                text-align: left;
+              "
+            >
+              <li>
+                <i
+                  class="fas fa-check-circle"
+                  style="color: var(--accent-color)"
+                ></i>
+                Secure Development Awareness (2024)
+              </li>
+              <li>
+                <i
+                  class="fas fa-check-circle"
+                  style="color: var(--accent-color)"
+                ></i>
+                Programmer Training - Tramontina (264h)
+              </li>
+              <li>
+                <i
+                  class="fas fa-check-circle"
+                  style="color: var(--accent-color)"
+                ></i>
+                Python 3 Advanced - Curso em Vídeo (120h)
+              </li>
+            </ul>
           </div>
         </div>
       </section>
@@ -158,8 +213,13 @@
               "
             ></i>
             <h3>Backend Engineering</h3>
-            <p>Java, Python, C#, Spring Boot</p>
+            <p>
+              Specializing in <strong>Java (Spring Boot)</strong> and
+              <strong>C#</strong>. Focus on clean, self-documenting code and
+              complex business logic for enterprise-scale applications.
+            </p>
           </div>
+
           <div class="skill-card card">
             <i
               class="fas fa-database"
@@ -169,20 +229,29 @@
                 margin-bottom: 1rem;
               "
             ></i>
-            <h3>Data Architecture</h3>
-            <p>SQL, Informix, PySpark, ETL</p>
+            <h3>Data & Analytics</h3>
+            <p>
+              Expertise in <strong>SQL (PostgreSQL, Informix)</strong> and
+              <strong>PySpark</strong>. Experience building ETL pipelines from
+              APIs to <strong>Databricks</strong> and Tableau.
+            </p>
           </div>
+
           <div class="skill-card card">
             <i
-              class="fas fa-cloud"
+              class="fas fa-tools"
               style="
                 font-size: 2rem;
                 color: var(--accent-color);
                 margin-bottom: 1rem;
               "
             ></i>
-            <h3>Cloud & DevOps</h3>
-            <p>Docker, Git, CI/CD Pipelines</p>
+            <h3>DevOps & Tooling</h3>
+            <p>
+              Managing lifecycles with <strong>Docker</strong>,
+              <strong>GitLab CI/CD</strong>, and <strong>Git</strong>. Proactive
+              system monitoring and debugging using <strong>Datadog</strong>.
+            </p>
           </div>
         </div>
       </section>
