--- a/index.html
+++ b/index.html
@@ -18,8 +18,15 @@
   <body>
     <header>
       <nav>
+        <button class="mobile-menu-toggle" aria-label="Open Menu">
+          <i class="fas fa-bars"></i>
+        </button>
+
         <div class="logo">TE.<span>dev</span></div>
-        <ul>
+
+        <div class="nav-spacer"></div>
+
+        <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
           <li><a href="#skills">Skills</a></li>
